--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       justify-content: center;
       padding: 40px 20px;
       color: var(--text);
-      overflow-y: auto; /* allow scroll on small screens */
+      overflow-y: auto;
       -webkit-overflow-scrolling: touch;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
@@ -188,7 +188,7 @@
       border: 1px solid rgba(255,255,255,0.08);
       transition: all 0.25s ease;
       display: block;
-      min-height: 44px; /* ensure large tap target */
+      min-height: 44px;
       line-height: 1;
       display: flex;
       align-items: center;
@@ -270,7 +270,7 @@
   <div class="card" id="profileCard" role="region" aria-label="Thông tin DuckXKurumi">
     <div class="avatar-wrapper">
       <div class="avatar" aria-hidden="true">
-        <img class="main" src="https://files.catbox.moe/hj0xae.webp" alt="Avatar chính">
+        <img class="main" src="https://files.catbox.moe/hj0xae.webp" alt="Avatar">
       </div>
       <img class="avatar-overlay" src="https://cdn.discordapp.com/avatar-decoration-presets/a_be111e4303d634c55500202a61656e0b.png?size=80&passthrough=true" alt="" aria-hidden="true">
     </div>
