--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
       z-index: 0;
     }
 
-    /* --- Card --- */
     .card {
       background: rgba(255,255,255,0.02);
       border-radius: var(--radius);
@@ -79,7 +78,6 @@
       border-radius: inherit;
     }
 
-    /* --- Avatar --- */
     .avatar-wrapper {
       position: relative;
       display: inline-block;
@@ -132,7 +130,6 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* --- Social Icons --- */
     .social-icons {
       display: flex;
       justify-content: center;
@@ -214,15 +211,92 @@
       transform: translateZ(10px);
     }
 
-    /* --- Accessibility & motion preferences --- */
+    .delayed-popup {
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      background: linear-gradient(180deg, rgba(20,20,30,0.98), rgba(10,10,20,0.98));
+      color: var(--text);
+      border-radius: 12px;
+      padding: 12px 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6), 0 0 24px rgba(123,97,255,0.06);
+      z-index: 9999;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      min-width: 220px;
+      max-width: calc(100% - 40px);
+      opacity: 0;
+      transform: translateY(10px) scale(0.98);
+      transition: opacity 200ms ease, transform 200ms ease;
+      pointer-events: auto;
+    }
+
+    .delayed-popup.show {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
+
+    .delayed-popup .message {
+      font-size: 0.95rem;
+      line-height: 1.1;
+      flex: 1 1 auto;
+    }
+
+    .delayed-popup .count {
+      font-weight: 700;
+      color: #ffd26b;
+      margin-left: 6px;
+    }
+
+    .delayed-popup .controls {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .delayed-popup .btn {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.08);
+      color: var(--text);
+      padding: 6px 8px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.85rem;
+    }
+
+    .delayed-popup .btn:focus {
+      outline: 3px solid rgba(0,240,255,0.18);
+      outline-offset: 3px;
+    }
+
+    .delayed-popup .progress {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 4px;
+      background: linear-gradient(90deg, rgba(123,97,255,0.9), rgba(0,240,255,0.9));
+      border-radius: 0 0 10px 10px;
+      transform-origin: left center;
+      width: 0%;
+      transition: width 100ms linear;
+    }
+
+    @media (max-width: 420px) {
+      .delayed-popup { right: 12px; bottom: 12px; min-width: 180px; padding: 10px; }
+      .delayed-popup .message { font-size: 0.9rem; }
+    }
+
     @media (prefers-reduced-motion: reduce) {
       h1 { animation: none; }
       .card { transition: none; }
       .card::before { transition: none; }
       .social-icon, .link { transition: none; }
+      .delayed-popup { transition: none; }
+      .delayed-popup .progress { transition: none; }
     }
 
-    /* --- Mobile responsive tweaks --- */
     @media (max-width: 600px) {
       body {
         padding: 20px 12px;
@@ -306,6 +380,17 @@
     <footer>© 2025 DuckXKurumi</footer>
   </div>
 
+  <!-- Delayed navigation popup -->
+  <div id="delayedPopup" class="delayed-popup" role="status" aria-live="polite" aria-atomic="true" hidden>
+    <div class="message">
+      Preparing to redirect to link. Please wait. <span id="delayCount" class="count">3</span>s...
+    </div>
+    <div class="controls" aria-hidden="false">
+      <button id="cancelBtn" class="btn" type="button" title="Cancel">Cancel</button>
+    </div>
+    <div class="progress" id="delayProgress" aria-hidden="true"></div>
+  </div>
+
   <script>
     (function () {
       const card = document.getElementById('profileCard');
@@ -322,7 +407,6 @@
           const dx = x - r.width / 2;
           const dy = y - r.height / 2;
 
-          // soften effect for better UX
           const rotateX = (dy / r.height) * 55;
           const rotateY = -(dx / r.width) * 55;
 
@@ -366,6 +450,141 @@
               return false;
           }
       });
+
+      const popup = document.getElementById('delayedPopup');
+      const delayCountEl = document.getElementById('delayCount');
+      const progressEl = document.getElementById('delayProgress');
+      const cancelBtn = document.getElementById('cancelBtn');
+
+      let countdownTimer = null;
+      let progressTimer = null;
+      let remaining = 0;
+      let totalDelay = 3000; // ms
+      let startTime = 0;
+      let pendingHref = null;
+      let pendingTarget = null;
+      let pendingRel = null;
+      let pendingTitle = null;
+
+      const linkSelector = '#profileCard a[href]';
+      const links = document.querySelectorAll(linkSelector);
+
+      function showPopup(href, target, rel, title) {
+        if (!popup) return;
+        pendingHref = href;
+        pendingTarget = target || '_self';
+        pendingRel = rel || '';
+        pendingTitle = title || href;
+
+        popup.removeAttribute('hidden');
+        popup.classList.add('show');
+        remaining = Math.ceil(totalDelay / 1000);
+        delayCountEl.textContent = remaining.toString();
+
+        progressEl.style.width = '0%';
+        startTime = Date.now();
+
+        function updateProgress() {
+          const elapsed = Date.now() - startTime;
+          const pct = Math.min(100, (elapsed / totalDelay) * 100);
+          progressEl.style.width = pct + '%';
+          if (elapsed < totalDelay) {
+            progressTimer = requestAnimationFrame(updateProgress);
+          }
+        }
+        progressTimer = requestAnimationFrame(updateProgress);
+
+        countdownTimer = setInterval(() => {
+          const elapsed = Date.now() - startTime;
+          const secsLeft = Math.max(0, Math.ceil((totalDelay - elapsed) / 1000));
+          delayCountEl.textContent = secsLeft.toString();
+        }, 150);
+
+        setTimeout(() => {
+          clearTimeoutsAndHide();
+          navigateToPending();
+        }, totalDelay);
+      }
+
+      function clearTimeoutsAndHide() {
+        if (countdownTimer) {
+          clearInterval(countdownTimer);
+          countdownTimer = null;
+        }
+        if (progressTimer) {
+          cancelAnimationFrame(progressTimer);
+          progressTimer = null;
+        }
+        if (popup) {
+          popup.classList.remove('show');
+          setTimeout(() => {
+            popup.setAttribute('hidden', 'true');
+          }, 220);
+        }
+      }
+
+      function navigateToPending() {
+        if (!pendingHref) return;
+        try {
+          if (pendingTarget === '_blank') {
+            const features = '';
+            window.open(pendingHref, '_blank', features);
+          } else {
+            window.location.href = pendingHref;
+          }
+        } catch (e) {
+          window.location.href = pendingHref;
+        } finally {
+          pendingHref = null;
+          pendingTarget = null;
+          pendingRel = null;
+          pendingTitle = null;
+        }
+      }
+
+      function cancelPendingNavigation() {
+        pendingHref = null;
+        pendingTarget = null;
+        pendingRel = null;
+        pendingTitle = null;
+        clearTimeoutsAndHide();
+      }
+
+      links.forEach(a => {
+        a.addEventListener('click', function (ev) {
+          if (ev.metaKey || ev.ctrlKey || ev.shiftKey || ev.altKey) return;
+          ev.preventDefault();
+          const href = a.getAttribute('href');
+          const target = a.getAttribute('target') || '_self';
+          const rel = a.getAttribute('rel') || '';
+          const title = a.getAttribute('title') || a.textContent || href;
+          showPopup(href, target, rel, title);
+        });
+      });
+
+      cancelBtn.addEventListener('click', function () {
+        cancelPendingNavigation();
+      });
+
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' || e.key === 'Esc') {
+          if (pendingHref) {
+            cancelPendingNavigation();
+          }
+        }
+      });
+
+      window.addEventListener('beforeunload', function () {
+        cancelPendingNavigation();
+      });
+
+      const observer = new MutationObserver(() => {
+        if (popup && popup.classList.contains('show')) {
+          cancelBtn.focus({ preventScroll: true });
+        }
+      });
+      if (popup) observer.observe(popup, { attributes: true, attributeFilter: ['class'] });
+
     })();
   </script>
 </body>
