--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
     .social-icon.discord:hover { background: #5865F2; color: #fff; }
     .social-icon.roblox:hover { background: #111; color: #fff; box-shadow: 0 0 18px rgba(255,255,255,0.12); }
 
-    /* --- Links --- */
     .links {
       display: flex;
       flex-direction: column;
@@ -344,7 +343,7 @@
   <div class="card" id="profileCard" role="region" aria-label="Thông tin DuckXKurumi">
     <div class="avatar-wrapper">
       <div class="avatar" aria-hidden="true">
-        <img class="main" src="https://files.catbox.moe/hj0xae.webp" alt="Avatar">
+        <img class="main" src="profile_avt.webp" alt="Avatar">
       </div>
       <img class="avatar-overlay" src="https://cdn.discordapp.com/avatar-decoration-presets/a_be111e4303d634c55500202a61656e0b.png?size=80&passthrough=true" alt="" aria-hidden="true">
     </div>
