--- a/index.html
+++ b/index.html
@@ -1,43 +1,18 @@
-<?php
-$profileName = 'DuckXKurumi';
-$title = $profileName . ' - Profile';
-$year = date('Y');
-
-$socialLinks = [
-    'youtube' => [
-        ['href' => 'https://www.youtube.com/@vzduckrblx', 'title' => 'YouTube - Main channel'],
-    ],
-    'roblox' => [
-        ['href' => 'https://www.roblox.com/vi/users/7316872206/profile', 'title' => 'Roblox Profile'],
-    ],
-    'discord' => [
-        ['href' => 'https://discord.com/users/1133725784377405541', 'title' => 'Discord Profile'],
-    ],
-];
-
-$icons = [
-    'youtube' => '<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M23.499 6.203a2.974 2.974 0 0 0-2.092-2.104C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.407.599A2.974 2.974 0 0 0 .501 6.203C0 8.116 0 12.001 0 12.001s0 3.884.501 5.798a2.974 2.974 0 0 0 2.092 2.104C4.495 20.5 12 20.5 12 20.5s7.505 0 9.407-.599a2.974 2.974 0 0 0 2.092-2.104C24 15.885 24 12.001 24 12.001s0-3.885-.501-5.798zM9.546 15.569V8.432L15.818 12l-6.272 3.569z"/></svg>',
-    'roblox' => '<svg width="24" height="24" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true"><path d="M117.3 0L0 394.7 394.7 512 512 117.3 117.3 0zm181.3 330.7l-117.3-32 32-117.3 117.3 32-32 117.3z"></path></svg>',
-    'discord' => '<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.445.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/></svg>',
-];
-
-function esc($s) {
-    return htmlspecialchars((string)$s, ENT_QUOTES, 'UTF-8');
-}
-?>
 <!doctype html>
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><?= esc($title) ?></title>
+  <title>DuckXKurumi - Profile</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
-  <div class="card" id="profileCard" role="region" aria-label="Information <?= esc($profileName) ?>">
+  <div class="card" id="profileCard" role="region" aria-label="Thông tin DuckXKurumi">
     <div class="avatar-wrapper">
       <div class="avatar" aria-hidden="true">
         <img class="main" src="profile_avt.webp" alt="Avatar">
@@ -45,30 +20,27 @@ function esc($s) {
       <img class="avatar-overlay" src="https://cdn.discordapp.com/avatar-decoration-presets/a_be111e4303d634c55500202a61656e0b.png?size=80&passthrough=true" alt="" aria-hidden="true">
     </div>
 
-    <h1><?= esc($profileName) ?></h1>
+    <h1>DuckXKurumi</h1>
 
     <div class="social-icons" role="navigation" aria-label="Social Network Links">
-      <?php
-      foreach ($socialLinks as $platform => $entries):
-          if (!isset($icons[$platform]) || !is_array($entries) || count($entries) === 0) {
-              continue;
-          }
-          foreach ($entries as $idx => $entry):
-              $href = isset($entry['href']) ? $entry['href'] : '#';
-              $title = isset($entry['title']) ? $entry['title'] : ucfirst($platform);
-              $class = 'social-icon ' . esc($platform);
-              if (count($entries) > 1) {
-                  $class .= ' multiple';
-              }
-              $aria = esc($title) . (count($entries) > 1 ? ' (' . ($idx + 1) . ')' : '');
-      ?>
-        <a href="<?= esc($href) ?>" class="<?= $class ?>" title="<?= esc($title) ?>" target="_blank" rel="noopener noreferrer" aria-label="<?= $aria ?>">
-          <?= $icons[$platform] ?? '' ?>
-        </a>
-      <?php
-          endforeach;
-      endforeach;
-      ?>
+      <!-- YouTube -->
+      <a href="https://www.youtube.com/@vzduckrblx" class="social-icon youtube" title="YouTube" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M23.499 6.203a2.974 2.974 0 0 0-2.092-2.104C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.407.599A2.974 2.974 0 0 0 .501 6.203C0 8.116 0 12.001 0 12.001s0 3.884.501 5.798a2.974 2.974 0 0 0 2.092 2.104C4.495 20.5 12 20.5 12 20.5s7.505 0 9.407-.599a2.974 2.974 0 0 0 2.092-2.104C24 15.885 24 12.001 24 12.001s0-3.885-.501-5.798zM9.546 15.569V8.432L15.818 12l-6.272 3.569z"/>
+        </svg>
+      </a>
+      <!-- Roblox -->
+      <a href="https://www.roblox.com/vi/users/7316872206/profile" class="social-icon roblox" title="Roblox" target="_blank" rel="noopener noreferrer" aria-label="Roblox">
+        <svg width="24" height="24" viewBox="0 0 512 512" fill="currentColor" aria-hidden="true">
+          <path d="M117.3 0L0 394.7 394.7 512 512 117.3 117.3 0zm181.3 330.7l-117.3-32 32-117.3 117.3 32-32 117.3z"></path>
+        </svg>
+      </a>
+      <!-- Discord -->
+      <a href="https://discord.com/users/1133725784377405541" class="social-icon discord" title="Discord" target="_blank" rel="noopener noreferrer" aria-label="Discord">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.445.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/>
+        </svg>
+      </a>
     </div>
 
     <div class="links">
@@ -76,7 +48,7 @@ function esc($s) {
       <a href="https://shopduckrbx.store/" class="link">My Shop</a>
     </div>
 
-    <footer>© <?= esc($year) ?> <?= esc($profileName) ?></footer>
+    <footer>© 2025 DuckXKurumi</footer>
   </div>
 
   <div id="delayedPopup" class="delayed-popup" role="status" aria-live="polite" aria-atomic="true" hidden>
