--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 
     <div class="links">
       <a href="https://duckcmnt-executors.vercel.app/" class="link">Executors Roblox</a>
-      <a href="https://shopduckrbx.store/" class="link">My Shop</a>
+      <div class="dropdown">
+        <button class="link dropdown-btn" type="button">My Shop</button>
+      
+        <div class="dropdown-menu">
+          <a href="https://shopduckrbx.store/" class="link dropdown-item">Shop Chính</a>
+          <a href="https://duckshop.vip/" class="link dropdown-item">Shop VIP</a>
+          <a href="https://discord.gg/yourserver" class="link dropdown-item">Support Server</a>
+        </div>
+      </div>
     </div>
 
     <footer>© 2025 DuckXKurumi</footer>
