--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
     <div class="links">
       <a href="https://duckcmnt-executors.vercel.app/" class="link">Executors Roblox</a>
       <div class="dropdown">
-        <button class="link dropdown-btn" type="button">My Shop</button>
-      
-        <div class="dropdown-menu">
-          <a href="https://shopduckrbx.store/" class="link dropdown-item">Shop Chính</a>
-          <a href="https://duckshop.vip/" class="link dropdown-item">Shop VIP</a>
-          <a href="https://discord.gg/yourserver" class="link dropdown-item">Support Server</a>
-        </div>
-      </div>
+  <button class="link dropdown-btn" type="button">My Shop</button>
+
+  <div class="dropdown-panel">
+    <div class="dropdown-scroll">
+      <a href="https://shopduckrbx.store/" class="link dropdown-item">Shop Chính</a>
+      <a href="https://duckshop.vip/" class="link dropdown-item">Shop VIP</a>
+      <a href="https://discord.gg/yourserver" class="link dropdown-item">Support Server</a>
+      <a href="https://google.com" class="link dropdown-item">Test 1</a>
+      <a href="https://google.com" class="link dropdown-item">Test 2</a>
+    </div>
+  </div>
+</div>
+
     </div>
 
     <footer>© 2025 DuckXKurumi</footer>
