--- a/index.html
+++ b/index.html
@@ -7,8 +7,336 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
-  
+  <style>
+    :root {
+      --bg: #0b0f1a;
+      --card: rgba(255,255,255,0.05);
+      --neon1: #7b61ff;
+      --neon2: #00f0ff;
+      --text: #f3f6ff;
+      --muted: rgba(255,255,255,0.6);
+      --radius: 20px;
+      font-family: "Poppins", sans-serif;
+    }
+
+    * { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
+
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      background: url('https://files.catbox.moe/q7hhtp.jpeg') no-repeat center center;
+      background-size: cover;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 20px;
+      color: var(--text);
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.25));
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .card {
+      background: rgba(255,255,255,0.02);
+      border-radius: var(--radius);
+      padding: 40px 30px;
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(255,255,255,0.08);
+      box-shadow: 0 0 25px rgba(0,0,0,0.5);
+      transition: transform 0.45s cubic-bezier(0.25,1,0.5,1), box-shadow 0.45s ease;
+      transform-style: preserve-3d;
+      position: relative;
+      overflow: visible;
+      z-index: 1;
+      border: 2px solid rgba(123,97,255,0.25);
+    }
+
+    .card::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: radial-gradient(circle at var(--light-x,50%) var(--light-y,50%), rgba(255,255,255,0.12), transparent 55%);
+      pointer-events: none;
+      transition: background 0.18s ease-out;
+      border-radius: inherit;
+    }
+
+    .avatar-wrapper {
+      position: relative;
+      display: inline-block;
+      margin-bottom: 18px;
+    }
+
+    .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: var(--bg);
+      display: inline-block;
+    }
+
+    .avatar img.main {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      border-radius: 50%;
+    }
+
+    .avatar-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 140px;
+      height: 140px;
+      pointer-events: none;
+      object-fit: contain;
+    }
+
+    h1 {
+      font-size: 1.6rem;
+      font-weight: 700;
+      background: linear-gradient(90deg, #ff69b4, #800080, #ffffff, #00ffff);
+      background-size: 300% 100%;
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      margin-bottom: 20px;
+      transform: translateZ(30px);
+      animation: gradientMove 5s linear infinite;
+    }
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin-bottom: 25px;
+      transform: translateZ(25px);
+    }
+
+    .social-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 48px;
+      height: 48px;
+      border-radius: 12px;
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.1);
+      color: var(--text);
+      transition: all 0.2s ease;
+      text-decoration: none;
+      flex-shrink: 0;
+    }
+
+    .social-icon:focus {
+      outline: 3px solid rgba(123,97,255,0.25);
+      outline-offset: 3px;
+    }
+
+    .social-icon:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 0 18px rgba(0,240,255,0.18);
+    }
+
+    .social-icon.youtube:hover { background: #ff2e2e; color: #fff; }
+    .social-icon.discord:hover { background: #5865F2; color: #fff; }
+    .social-icon.roblox:hover { background: #111; color: #fff; box-shadow: 0 0 18px rgba(255,255,255,0.12); }
+
+    .links {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      transform: translateZ(20px);
+    }
+
+    .link {
+      text-decoration: none;
+      font-weight: 600;
+      padding: 14px;
+      border-radius: 14px;
+      background: rgba(255,255,255,0.03);
+      color: var(--text);
+      border: 1px solid rgba(255,255,255,0.08);
+      transition: all 0.25s ease;
+      display: block;
+      min-height: 44px;
+      line-height: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .link:focus {
+      outline: 3px solid rgba(0,240,255,0.18);
+      outline-offset: 3px;
+    }
+
+    .link:hover {
+      background: #ff69b4;
+      color: #fff;
+      transform: translateY(-2px);
+      box-shadow: 0 0 15px rgba(255,105,180,0.3);
+    }
+
+    footer {
+      margin-top: 26px;
+      font-size: 0.82rem;
+      color: var(--muted);
+      transform: translateZ(10px);
+    }
+
+    .delayed-popup {
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      background: linear-gradient(180deg, rgba(20,20,30,0.98), rgba(10,10,20,0.98));
+      color: var(--text);
+      border-radius: 12px;
+      padding: 12px 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6), 0 0 24px rgba(123,97,255,0.06);
+      z-index: 9999;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      min-width: 220px;
+      max-width: calc(100% - 40px);
+      opacity: 0;
+      transform: translateY(10px) scale(0.98);
+      transition: opacity 200ms ease, transform 200ms ease;
+      pointer-events: auto;
+    }
+
+    .delayed-popup.show {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
+
+    .delayed-popup .message {
+      font-size: 0.95rem;
+      line-height: 1.1;
+      flex: 1 1 auto;
+    }
+
+    .delayed-popup .count {
+      font-weight: 700;
+      color: #ffd26b;
+      margin-left: 6px;
+    }
+
+    .delayed-popup .controls {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .delayed-popup .btn {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.08);
+      color: var(--text);
+      padding: 6px 8px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.85rem;
+    }
+
+    .delayed-popup .btn:focus {
+      outline: 3px solid rgba(0,240,255,0.18);
+      outline-offset: 3px;
+    }
+
+    .delayed-popup .progress {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 4px;
+      background: linear-gradient(90deg, rgba(123,97,255,0.9), rgba(0,240,255,0.9));
+      border-radius: 0 0 10px 10px;
+      transform-origin: left center;
+      width: 0%;
+      transition: width 100ms linear;
+    }
+
+    @media (max-width: 420px) {
+      .delayed-popup { right: 12px; bottom: 12px; min-width: 180px; padding: 10px; }
+      .delayed-popup .message { font-size: 0.9rem; }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      h1 { animation: none; }
+      .card { transition: none; }
+      .card::before { transition: none; }
+      .social-icon, .link { transition: none; }
+      .delayed-popup { transition: none; }
+      .delayed-popup .progress { transition: none; }
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 20px 12px;
+        background-attachment: scroll;
+      }
+      .card {
+        padding: 20px 16px;
+        border-radius: 14px;
+        max-width: 520px;
+        width: calc(100% - 12px);
+        box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+        backdrop-filter: blur(8px);
+      }
+      .card::before {
+        background: radial-gradient(circle at var(--light-x,50%) var(--light-y,50%), rgba(255,255,255,0.08), transparent 50%);
+      }
+      .avatar { width: 96px; height: 96px; }
+      .avatar-overlay { width: 110px; height: 110px; }
+      h1 { font-size: 1.2rem; margin-bottom: 14px; }
+      .social-icons { gap: 12px; margin-bottom: 18px; }
+      .social-icon { width: 56px; height: 56px; border-radius: 12px; }
+      .links .link { padding: 14px; border-radius: 12px; font-size: 0.98rem; }
+      footer { font-size: 0.78rem; margin-top: 18px; }
+    }
+
+    @media (hover: none) {
+      .card { transform: none !important; transition: none; }
+      .card::before { transition: none; }
+      .social-icon:hover, .link:hover { transform: none; box-shadow: none; }
+    }
+
+    @media (max-width: 380px) {
+      .card { padding: 16px 12px; border-radius: 12px; }
+      .avatar { width: 84px; height: 84px; }
+      .avatar-overlay { width: 96px; height: 96px; }
+      h1 { font-size: 1.05rem; }
+      .social-icon { width: 50px; height: 50px; }
+      .links .link { padding: 12px; font-size: 0.95rem; }
+      body::after { background: linear-gradient(180deg, rgba(0,0,0,0.45), rgba(0,0,0,0.6)); }
+    }
+  </style>
 </head>
 
 <body>
@@ -45,20 +373,7 @@
 
     <div class="links">
       <a href="https://duckcmnt-executors.vercel.app/" class="link">Executors Roblox</a>
-      <div class="dropdown">
-  <button class="link dropdown-btn" type="button">My Shop</button>
-
-  <div class="dropdown-panel">
-    <div class="dropdown-scroll">
-      <a href="https://shopduckrbx.store/" class="link dropdown-item">Shop Chính</a>
-      <a href="https://duckshop.vip/" class="link dropdown-item">Shop VIP</a>
-      <a href="https://discord.gg/yourserver" class="link dropdown-item">Support Server</a>
-      <a href="https://google.com" class="link dropdown-item">Test 1</a>
-      <a href="https://google.com" class="link dropdown-item">Test 2</a>
-    </div>
-  </div>
-</div>
-
+      <a href="https://uggiare.vn/join/3068" class="link">Shop Selling Cheap CloudPhone</a>
     </div>
 
     <footer>© 2025 DuckXKurumi</footer>
@@ -74,7 +389,201 @@
     <div class="progress" id="delayProgress" aria-hidden="true"></div>
   </div>
 
-<script src="script.js"></script>
-  
+  <script>
+    (function () {
+      const card = document.getElementById('profileCard');
+
+      const supportsHover = window.matchMedia && window.matchMedia('(hover: hover) and (pointer: fine)').matches;
+      const prefersReducedMotion = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+
+      if (supportsHover && !prefersReducedMotion) {
+        const handleMove = e => {
+          const r = card.getBoundingClientRect();
+          const x = e.clientX - r.left;
+          const y = e.clientY - r.top;
+
+          const dx = x - r.width / 2;
+          const dy = y - r.height / 2;
+
+          const rotateX = (dy / r.height) * 55;
+          const rotateY = -(dx / r.width) * 55;
+
+          card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.03)`;
+          card.style.boxShadow = `0 16px 40px rgba(123,97,255,0.18)`;
+
+          const percentX = (x / r.width) * 100;
+          const percentY = (y / r.height) * 100;
+          card.style.setProperty('--light-x', `${percentX}%`);
+          card.style.setProperty('--light-y', `${percentY}%`);
+        };
+
+        const handleLeave = () => {
+          card.style.transform = 'rotateX(0deg) rotateY(0deg) scale(1)';
+          card.style.boxShadow = '0 0 25px rgba(0,0,0,0.5)';
+          card.style.setProperty('--light-x', `50%`);
+          card.style.setProperty('--light-y', `50%`);
+        };
+
+        card.addEventListener('mousemove', handleMove);
+        card.addEventListener('mouseleave', handleLeave);
+      } else {
+        card.style.transform = 'none';
+        card.style.boxShadow = '0 8px 30px rgba(0,0,0,0.6)';
+        card.style.setProperty('--light-x', `50%`);
+        card.style.setProperty('--light-y', `50%`);
+      }
+
+      document.addEventListener('contextmenu', event => event.preventDefault());
+      document.addEventListener('keydown', function(event) {
+          if (event.keyCode === 123) {
+              event.preventDefault();
+              return false;
+          }
+          if ((event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 74))) {
+              event.preventDefault();
+              return false;
+          }
+          if (event.ctrlKey && event.keyCode === 85) {
+              event.preventDefault();
+              return false;
+          }
+      });
+
+      const popup = document.getElementById('delayedPopup');
+      const delayCountEl = document.getElementById('delayCount');
+      const progressEl = document.getElementById('delayProgress');
+      const cancelBtn = document.getElementById('cancelBtn');
+
+      let countdownTimer = null;
+      let progressTimer = null;
+      let remaining = 0;
+      let totalDelay = 5000;
+      let startTime = 0;
+      let pendingHref = null;
+      let pendingTarget = null;
+      let pendingRel = null;
+      let pendingTitle = null;
+
+      const linkSelector = '#profileCard a[href]';
+      const links = document.querySelectorAll(linkSelector);
+
+      function showPopup(href, target, rel, title) {
+        if (!popup) return;
+        pendingHref = href;
+        pendingTarget = target || '_self';
+        pendingRel = rel || '';
+        pendingTitle = title || href;
+
+        popup.removeAttribute('hidden');
+        popup.classList.add('show');
+        remaining = Math.ceil(totalDelay / 1000);
+        delayCountEl.textContent = remaining.toString();
+
+        progressEl.style.width = '0%';
+        startTime = Date.now();
+
+        function updateProgress() {
+          const elapsed = Date.now() - startTime;
+          const pct = Math.min(100, (elapsed / totalDelay) * 100);
+          progressEl.style.width = pct + '%';
+          if (elapsed < totalDelay) {
+            progressTimer = requestAnimationFrame(updateProgress);
+          }
+        }
+        progressTimer = requestAnimationFrame(updateProgress);
+
+        countdownTimer = setInterval(() => {
+          const elapsed = Date.now() - startTime;
+          const secsLeft = Math.max(0, Math.ceil((totalDelay - elapsed) / 1000));
+          delayCountEl.textContent = secsLeft.toString();
+        }, 150);
+
+        setTimeout(() => {
+          clearTimeoutsAndHide();
+          navigateToPending();
+        }, totalDelay);
+      }
+
+      function clearTimeoutsAndHide() {
+        if (countdownTimer) {
+          clearInterval(countdownTimer);
+          countdownTimer = null;
+        }
+        if (progressTimer) {
+          cancelAnimationFrame(progressTimer);
+          progressTimer = null;
+        }
+        if (popup) {
+          popup.classList.remove('show');
+          setTimeout(() => {
+            popup.setAttribute('hidden', 'true');
+          }, 220);
+        }
+      }
+
+      function navigateToPending() {
+        if (!pendingHref) return;
+        try {
+          if (pendingTarget === '_blank') {
+            const features = '';
+            window.open(pendingHref, '_blank', features);
+          } else {
+            window.location.href = pendingHref;
+          }
+        } catch (e) {
+          window.location.href = pendingHref;
+        } finally {
+          pendingHref = null;
+          pendingTarget = null;
+          pendingRel = null;
+          pendingTitle = null;
+        }
+      }
+
+      function cancelPendingNavigation() {
+        pendingHref = null;
+        pendingTarget = null;
+        pendingRel = null;
+        pendingTitle = null;
+        clearTimeoutsAndHide();
+      }
+
+      links.forEach(a => {
+        a.addEventListener('click', function (ev) {
+          if (ev.metaKey || ev.ctrlKey || ev.shiftKey || ev.altKey) return;
+          ev.preventDefault();
+          const href = a.getAttribute('href');
+          const target = a.getAttribute('target') || '_self';
+          const rel = a.getAttribute('rel') || '';
+          const title = a.getAttribute('title') || a.textContent || href;
+          showPopup(href, target, rel, title);
+        });
+      });
+
+      cancelBtn.addEventListener('click', function () {
+        cancelPendingNavigation();
+      });
+
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' || e.key === 'Esc') {
+          if (pendingHref) {
+            cancelPendingNavigation();
+          }
+        }
+      });
+
+      window.addEventListener('beforeunload', function () {
+        cancelPendingNavigation();
+      });
+
+      const observer = new MutationObserver(() => {
+        if (popup && popup.classList.contains('show')) {
+          cancelBtn.focus({ preventScroll: true });
+        }
+      });
+      if (popup) observer.observe(popup, { attributes: true, attributeFilter: ['class'] });
+
+    })();
+  </script>
 </body>
 </html>
